# newsreader

./: .gitignore  .gitlab-ci.yml  .pylintrc  LICENSE  README.rst  RELEASE.rst  requirements.txt  setup.cfg  setup.py  tox.ini
doc/man/: nr-config.5  nr.1
nr/: __init__.py  article.py  main.py  site.py
