[pbr]
skip_changelog = True
skip_authors = True

[metadata]
name = newsreader
author = Trevor Bramwell
author-email = trevor@bramwell.net
summary = Read the news from the comfort of your own terminal
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/bramwelt/newsreader
project_urls =
    Bug Tracker = https://github.com/bramwelt/newsreader/issues
    Documentation = https://newsreader.readthedocs.io/
    Source Code = https://github.com/bramwelt/newsreader/
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Console :: Curses
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Topic :: Communications
    Topic :: Office/Business :: News/Diary

[files]
packages =
    nr
data_files =
    man/man1 = doc/man/nr.1
    man/man5 = doc/man/nr-config.5

[entry_points]
console_scripts =
    nr = nr.main:main
